--- a/02-graphql-basic/package.json
+++ b/02-graphql-basic/package.json
@@ -4,6 +4,7 @@
   "description": "GraphQL basic",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
