--- a/02-graphql-basic/package.json
+++ b/02-graphql-basic/package.json
@@ -4,7 +4,7 @@
   "description": "GraphQL basic",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node src/index.js",
+    "start": "nodemon -x babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "nodemon": "^1.18.10",
     "prettier": "^1.16.4"
   },
   "dependencies": {
