initial mutation query setup

--- a/02-graphql-basic/package.json
+++ b/02-graphql-basic/package.json
@@ -28,6 +28,7 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
-    "graphql-yoga": "^1.17.4"
+    "graphql-yoga": "^1.17.4",
+    "uuid": "^3.3.2"
   }
 }
