--- a/blog-service/package.json
+++ b/blog-service/package.json
@@ -4,7 +4,7 @@
   "description": "GraphQL basic",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -x babel-node src/index.js",
+    "start": "nodemon src/index.js --ext js,graphql --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
